--- a/now.json
+++ b/now.json
@@ -6,6 +6,7 @@
     },
     "routes": [
       { "src": "/gh/(?<id>[^/]*)", "dest": "/api/?u=$id&p=github" },
-      { "src": "/gl/(?<id>[^/]*)", "dest": "/api/?u=$id&p=gitlab" }
+      { "src": "/gl/(?<id>[^/]*)", "dest": "/api/?u=$id&p=gitlab" },
+      { "src": "/gv/(?<id>[^/]*)", "dest": "/api/?u=$id&p=gravatar" }  
     ]
   }
