--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
         "linebreak-style": "off",
         "no-console": "off",
         "no-await-in-loop": "off",
-        "operator-linebreak": "off"
+        "operator-linebreak": "off",
+        "implicit-arrow-linebreak": "off"
     }
 }
